# hackclub-projects

./: .gitignore  README.md
hivemind-v2/: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  INSTALL.md  INSTALL.zh-CN.md  LICENSE  README.md  README.zh-CN.md  alembic.ini  devpost-submission.md  docker-compose.yml  install.py  pyproject.toml
hivemind-v2/.claude-plugin/: marketplace.json
hivemind-v2/.claude/agents/: engineering-ai-engineer.md  engineering-backend-architect.md  engineering-code-reviewer.md  engineering-database-optimizer.md  engineering-devops-automator.md  engineering-frontend-developer.md  engineering-git-workflow-master.md  engineering-mcp-builder.md  engineering-mobile-developer.md  engineering-rapid-prototyper.md  engineering-security-engineer.md  engineering-software-architect.md  engineering-sre.md  management-project-manager.md  management-tech-lead.md  specialized-workflow-architect.md  support-meeting-facilitator.md  support-technical-writer.md  testing-api-tester.md  testing-bug-fixer.md  testing-performance-benchmarker.md  testing-qa-engineer.md
hivemind-v2/.github/workflows/: ci.yml  github-repo-stats.yml  lint.yml
hivemind-v2/backend/api/: handlers.go  router.go
hivemind-v2/dashboard/: index.html
hivemind-v2/dashboard/src/: App.tsx  index.css
hivemind-v2/docker/: init.sql
hivemind-v2/docs/: architecture.md  ecosystem-deep-review-template.md  memory-v2-design.md  tool-loading-design.md
hivemind-v2/migrations/: env.py
hivemind-v2/migrations/versions/: a2f8e91c3d47_v1_1_schema_updates.py  d1cf5ca56f2b_initial_schema.py
hivemind-v2/plugin/: .mcp.json  LICENSE  README.md  bootstrap.py  loop.md  requirements.txt
hivemind-v2/plugin/.claude-plugin/: marketplace.json  plugin.json
hivemind-v2/plugin/agents/: debate-advocate.md  debate-critic.md  engineering-ai-engineer.md  engineering-backend-architect.md  engineering-database-optimizer.md  engineering-devops-automator.md  engineering-frontend-developer.md  engineering-git-workflow-master.md  engineering-mcp-builder.md  engineering-mobile-developer.md  engineering-rapid-prototyper.md  engineering-security-engineer.md  management-project-manager.md  specialized-workflow-architect.md  support-meeting-facilitator.md  support-technical-writer.md  testing-bug-fixer.md
hivemind-v2/plugin/commands/: os-doctor.md  os-help.md  os-hooks.md  os-init.md  os-meeting.md  os-status.md  os-task.md  os-up.md
hivemind-v2/scripts/: backfill_knowledge_links.py  bench_eco_compare.py  bench_ecosystem_search.py  check_invariants.sh  check_readme_numbers.sh  gen_tool_docs.py  hn_monitor.py  install.py  migrate_reports.py  migrate_to_project_dbs.py  os-watch.sh  preflight.sh  smoke_v15_release_e2e.py  test_ecosystem_detail.py  test_ecosystem_filter.py  test_ecosystem_frontend.py  traffic_report.py  update.py
hivemind-v2/tests/: conftest.py  e2e_api_coverage.py  e2e_dashboard_coverage.py  qa_event_timeline.py  smoke_api_comprehensive.py  test_wake_manager.py  test_workflow_reminder.py
(+487 files in other folders)
